# factorials

./: .directory  .gitignore  CMakeLists.txt  Factorials.sln  README.md  main.cpp
Factorials/: Factorials.cpp  Factorials.vcxproj  Factorials.vcxproj.filters  factorials.vcxproj  main.cpp  resource.h
factoriallib/: CMakeLists.txt  algorithms.cpp  factoriallib.cpp  factoriallib.h  factoriallib.vcxproj  factoriallib.vcxproj.filters  falgo.cpp  falgo.h  fmath.cpp  fmath.h  main.cpp  pch.h  prime_swing.cpp  prime_swing.h  ranges.cpp
factoriallib.test/: factoriallib.test.vcxproj  test.cpp
factoriallib/src/: fmath.cpp  fmath.h
factoriallib_benchmarks/: CMakeLists.txt  falgo_benchmark.cpp  main.cpp
factoriallib_tests/: CMakeLists.txt  falgo_test.cpp  fmath_test.cpp
factorials/: factorials.vcxproj.filters  main.cpp
factorials_test/: factorials_test.cpp  factorials_test.vcxproj  factorials_test.vcxproj.filters
factorialusing/: CMakeLists.txt
factorialusing/cmake/: FindFactoriallib.cmake
